# MCQ-Generator

./: .gitignore  README.md  demo.py  main.py  mcqs.json  pyproject.toml  requirements.txt  test.py  test01.py
mcq_gen/config/: config.yaml
mcq_gen/exception/: __init__.py  custom_exception.py
mcq_gen/logger/: __init__.py  cutom_logger.py
mcq_gen/model/: models.py
mcq_gen/prompts/: prompt_library.py
mcq_gen/src/data_ingestion/: chat_ingestor.py  faiss_manager.py
mcq_gen/src/generator/: generator.py  retrieval.py
mcq_gen/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
research/: data-ingestion.ipynb
test/: demo.py
test_data/: test.txt
