[project]
name = "mcq-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-mistralai>=1.0.1",
    "langsmith>=0.4.38",
    "mistralai>=1.9.11",
    "pandas>=2.3.3",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]
